# opengl-tutorial-solutions

./: README.md
1-open-a-window/: CMakeLists.txt
1-open-a-window/src/: tutorial1.cpp
10-indexed-draws/: CMakeLists.txt
10-indexed-draws/src/: tutorial10.cpp
10-indexed-draws/src/shaders/: passthrough.fsh
11-concatenating-transformations/: CMakeLists.txt
11-concatenating-transformations/src/: tutorial11.cpp
12-perspective-projection/: CMakeLists.txt
12-perspective-projection/src/: material.cpp  material.h  tutorial12.cpp
12-perspective-projection/src/shaders/: passthrough.vsh
13-camera-space/: CMakeLists.txt
13-camera-space/src/: tutorial13.cpp
14-camera-control/: CMakeLists.txt
14-camera-control/include/: camera.h  controls.h  material.h
14-camera-control/src/: camera.cpp  controls.cpp  material.cpp  tutorial14.cpp
14-camera-control/src/shaders/: passthrough.vsh
15-camera-control-part-2/: CMakeLists.txt
15-camera-control-part-2/include/: camera.h  utilities.h
15-camera-control-part-2/src/: camera.cpp  tutorial15.cpp  utilities.cpp
16-basic-texture-mapping/: CMakeLists.txt
16-basic-texture-mapping/include/: material.h
16-basic-texture-mapping/src/: material.cpp  texture.cpp  tutorial16.cpp  utilities.cpp
16-basic-texture-mapping/src/shaders/: passthrough.fsh
17-ambient-lighting/: CMakeLists.txt  tags
17-ambient-lighting/include/: controls.h  renderwindow.h
17-ambient-lighting/include/lights/: directional.h
17-ambient-lighting/include/materials/: phongmaterial.h
17-ambient-lighting/src/: controls.cpp  renderwindow.cpp  tutorial17.cpp
17-ambient-lighting/src/lights/: directional.cpp
17-ambient-lighting/src/materials/: phongmaterial.cpp
17-ambient-lighting/src/shaders/: passthrough.fsh  passthrough.vsh
18-diffuse-lighting/: CMakeLists.txt
18-diffuse-lighting/include/: renderwindow.h
18-diffuse-lighting/include/lights/: directional.h
18-diffuse-lighting/include/materials/: phongmaterial.h
18-diffuse-lighting/src/: tutorial18.cpp
19-specular-lighting/: CMakeLists.txt  tags
19-specular-lighting/include/: camera.h
19-specular-lighting/src/: camera.cpp  tutorial19.cpp
2-hello-dot/: CMakeLists.txt
2-hello-dot/src/: tutorial2.cpp
20-point-light/: CMakeLists.txt
20-point-light/include/: camera.h  texture.h  utilities.h
20-point-light/src/: renderwindow.cpp  tutorial20.cpp
21-spot-light/: CMakeLists.txt
21-spot-light/include/lights/: lightlist.h
21-spot-light/include/materials/: phongmaterial.h
21-spot-light/src/: controls.cpp  tutorial21.cpp
21-spot-light/src/lights/: lightlist.cpp
21-spot-light/src/materials/: phongmaterial.cpp
21-spot-light/src/shaders/: threelights.fsh
22-loading-3d-models/: CMakeLists.txt
22-loading-3d-models/include/: controls.h  texture.h
22-loading-3d-models/include/asset/: mesh.h  model.h
22-loading-3d-models/include/lights/: lightlist.h
22-loading-3d-models/include/materials/: material.h  phongmaterial.h
22-loading-3d-models/src/: texture.cpp  tutorial22.cpp
22-loading-3d-models/src/asset/: mesh.cpp  model.cpp
22-loading-3d-models/src/materials/: material.cpp  phongmaterial.cpp
22-loading-3d-models/src/shaders/: threelights.fsh
3-first-triangle/: CMakeLists.txt
3-first-triangle/src/: tutorial3.cpp
4-shaders/: CMakeLists.txt
4-shaders/src/: tutorial4.cpp
5-uniform-variables/: CMakeLists.txt
5-uniform-variables/src/: tutorial5.cpp
5-uniform-variables/src/shaders/: passthrough.vsh
6-translation-transformation/: CMakeLists.txt
6-translation-transformation/src/: tutorial6.cpp
7-rotation-transformation/: CMakeLists.txt
7-rotation-transformation/src/: tutorial7.cpp
8-scale-transformation/: CMakeLists.txt
8-scale-transformation/src/: tutorial8.cpp
9-interpolation/: CMakeLists.txt
9-interpolation/src/: tutorial9.cpp
(+18 files in other folders)
